--- a/language/oop5/final.xml
+++ b/language/oop5/final.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: 1.3 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 1.6 Maintainer: progcom Status: ready -->
  <sect1 xml:id="language.oop5.final" xmlns="http://docbook.org/ns/docbook">
   <title>Final 키워드</title>
   <para>
-   PHP 5는 자식 클래스가 메쏘드나 변수를 덮어 쓰는 것을 막도록, final 키워드를
-   지원합니다. 정의시에 final을 앞에 붙이면 됩니다.
+   PHP 5는 자식 클래스가 메쏘드를 덮어 쓰는 것을 막도록, final 키워드를
+   지원합니다. 정의시에 final을 앞에 붙이면 됩니다. 클래스 자체를 final로
+   정의하면 상속할 수 없습니다.
   </para>
   
   <example>
@@ -33,6 +34,29 @@ class ChildClass extends BaseClass {
    </programlisting>
   </example>
 
+  <example>
+   <title>Final 클래스 예제</title>
+   <programlisting role="php">
+<![CDATA[
+<?php
+final class BaseClass {
+   public function test() {
+       echo "BaseClass::test() 호출\n";
+   }
+
+   // 여기서는 함수의 final 지정 여부는 관계 없습니다.
+   final public function moreTesting() {
+       echo "BaseClass::moreTesting() 호출\n";
+   }
+}
+
+class ChildClass extends BaseClass {
+}
+// 결과는 Fatal error: Class ChildClass may not inherit from final class (BaseClass)
+?>
+]]>
+   </programlisting>
+  </example>
  </sect1>
  
 <!-- Keep this comment at the end of the file
