--- a/language/functions.xml
+++ b/language/functions.xml
@@ -129,8 +129,8 @@ bar();
     </simpara>
    </note>   
    <simpara>
-    함수에서 <link linkend="functions.variable-arg-list">가변 길이 인자
-     목록</link>과 <link linkend="functions.arguments.default">인자
+    함수에서 <link linkend="functions.variable-arg-list">가변 길이 인수
+     목록</link>과 <link linkend="functions.arguments.default">인수
      기본값</link>을 지원합니다. 자세한 정보는
     <function>func_num_args</function>, <function>func_get_arg</function>,
     <function>func_get_args</function> 함수 레퍼런스를 참고하십시오.
@@ -161,17 +161,17 @@ function recursion($a)
   </sect1>
  
   <sect1 xml:id="functions.arguments">
-   <title>함수 인자</title>
+   <title>함수 인수</title>
  
    <simpara>
-    함수 인자를 통해서 함수에 정보를 넘겨줄수 있다. 이런 함수 인자는
+    함수 인수를 통해서 함수에 정보를 넘겨줄수 있다. 이런 함수 인수는
     콤마(,)로 구별되는 표현 목록이다.
    </simpara> 
    <para>
-    PHP는 값에 의한 인자 전달(passing by value) (기본값),
+    PHP는 값에 의한 인수 전달(passing by value) (기본값),
     <link linkend="functions.arguments.by-reference">참조에 의한 전달</link>, 
-    <link linkend="functions.arguments.default">인자 기본값</link> 기능을
-    지원합니다. <link linkend="functions.variable-arg-list">가변 길이 인자
+    <link linkend="functions.arguments.default">인수 기본값</link> 기능을
+    지원합니다. <link linkend="functions.variable-arg-list">가변 길이 인수
      목록</link>도 지원하며, 자세한 정보는 <function>func_num_args</function>,
     <function>func_get_arg</function>, <function>func_get_args</function> 함수
     레퍼런스를 참고하십시오.
@@ -193,20 +193,20 @@ function takes_array($input)
    </para>
  
    <sect2 xml:id="functions.arguments.by-reference">
-    <title>참조에 의한 인자 전달하기</title>
+    <title>참조에 의한 인수 전달하기</title>
  
     <simpara>
-     기본적으로, 함수 인자는 값에 의해 전달됩니다. (그래서 함수내의 인자
-     변수값을 변경해도 함수 밖에서는 바뀌지 않습니다) 함수가 그 인자를 바꾸게
+     기본적으로, 함수 인수는 값에 의해 전달됩니다. (그래서 함수내의 인수
+     변수값을 변경해도 함수 밖에서는 바뀌지 않습니다) 함수가 그 인수를 바꾸게
      하려면, 참조로 넘겨줘야 합니다.
     </simpara>
     <para>
-     항상 함수의 인자를 참조로 넘기게 하려면, 함수 정의에서 엠퍼샌드(&amp;)를
-     인자 이름 앞에 붙이면 됩니다:
+     항상 함수의 인수를 참조로 넘기게 하려면, 함수 정의에서 엠퍼샌드(&amp;)를
+     인수 이름 앞에 붙이면 됩니다:
     </para>
     <para>
      <example>
-      <title>참조에 의해 함수 인자 전달하기</title>
+      <title>참조에 의해 함수 인수 전달하기</title>
       <programlisting role="php">
 <![CDATA[
 <?php
@@ -226,14 +226,14 @@ echo $str;    // outputs 'This is a string, and something extra.'
    </sect2>
  
    <sect2 xml:id="functions.arguments.default">
-    <title>기본 인자 값</title>
+    <title>기본 인수 값</title>
  
     <para>
-     함수는 다음과 같이 스칼라 인자에 대해 C++스타일 기본값으로 지정할수있다:
+     함수는 다음과 같이 스칼라 인수에 대해 C++스타일 기본값으로 지정할수있다:
     </para>
     <para>
      <example>
-      <title>함수에 기본 인자 사용하기</title>
+      <title>함수에 기본 인수 사용하기</title>
       <programlisting role="php">
 <![CDATA[
 <?php
@@ -287,13 +287,13 @@ echo makecoffee(array("카푸치노", "라바짜"), "찻주전자");
      클래스 멤버가 될수는 없다.
     </simpara>
     <para>
-     기본 인자를 사용할때에는 모든 기본값은 기본값을 쓰지 않는 인자의
+     기본 인수를 사용할때에는 모든 기본값은 기본값을 쓰지 않는 인수의
      오른쪽으로 가야 한다; 그렇지 않으면, 기대하던대로 작동하지 않을것이다.
      다음 예제 코드를 참고:
     </para>
     <para>
      <example>
-      <title>기본 함수 인자가 잘못 사용된 예</title>
+      <title>기본 함수 인수가 잘못 사용된 예</title>
       <programlisting role="php">
 <![CDATA[
 <?php
@@ -324,7 +324,7 @@ Making a bowl of raspberry .
     </para>
     <para>
      <example>
-      <title>기본 함수 인자의 정확한 사용예</title>
+      <title>기본 함수 인수의 정확한 사용예</title>
       <programlisting role="php">
 <![CDATA[
 <?php
@@ -358,7 +358,7 @@ Making a bowl of acidophilus raspberry.
    </sect2>
 
    <sect2 xml:id="functions.variable-arg-list">
-    <title>가변 길이 인자 목록</title>
+    <title>가변 길이 인수 목록</title>
 	
     <simpara>
      PHP 4 이상에서는 사용자 선언 함수에서 가변 길이 변수 목록 기능을
@@ -369,8 +369,8 @@ Making a bowl of acidophilus raspberry.
     </simpara>
 
     <simpara>
-     특별한 문법이 필요하지 않다. 인자 목록은 함수선언부에서 밝혀야하고
-     일반 인자와 동일하게 작동할것이다.
+     특별한 문법이 필요하지 않다. 인수 목록은 함수선언부에서 밝혀야하고
+     일반 인수와 동일하게 작동할것이다.
     </simpara>
 
    </sect2>
@@ -478,7 +478,7 @@ function foo() {
 
 function bar($arg = '')
 {
-    echo "bar() 안입니다; 인자는 '$arg'입니다.<br />\n";
+    echo "bar() 안입니다; 인수는 '$arg'입니다.<br />\n";
 }
 
 // echo를 감싸는 래퍼 함수입니다.
@@ -566,14 +566,14 @@ $foo->$funcname();  // $foo->Var()를 호출합니다.
     예를 들면,  
     <function>str_replace</function>함수는 변경된 문자열을 돌려주는 반면에
     <function>usort</function>함수는 실질적으로 변수 자체에 전달하도록 동작한다.
-    각 매뉴얼 페이지는 각함수에 대해서 함수 인자와 동작 변경,성공과 실패시 
+    각 매뉴얼 페이지는 각함수에 대해서 함수 인수와 동작 변경,성공과 실패시 
     돌려주는 값과 유용한 정보에 대해서 나와있다. 이런 중요한 차이점(아직은 희박)
     을 아는 것은 PHP 코드를 정확하게 쓰는데 있어서 매우 결정적인 역할을 한다.
    </para>
    <note>
     <simpara>
      <type>string</type>을 기대한 곳에 <type>array</type>를 넘기는 등, 함수에
-     주어진 인자가 기대한 것이 아닐 경우, 함수의 반환값은 정의되지 않았습니다.
+     주어진 인수가 기대한 것이 아닐 경우, 함수의 반환값은 정의되지 않았습니다.
      이런 경우 &null;을 반환할 수 있지만, 이는 단순한 경우이며, 이에 의존하지
      마십시오.
     </simpara>
