--- a/language/variables.xml
+++ b/language/variables.xml
@@ -35,7 +35,7 @@
    &tip.userlandnaming;
 
    <para>
-    변수 관련 함수는, <link linkend="ref.var">변수 함수 레퍼런스</link>를
+    변수 관련 함수는, <link linkend="ref.var">변수 관련 함수 레퍼런스</link>를
     참고하십시오.
    </para>
 
