--- a/language/expressions.xml
+++ b/language/expressions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.13 $ -->
+<!-- $Revision: 1.14 $ -->
 <!-- EN-Revision: 1.21 Maintainer: fuzzy74 Status: ready -->
  <chapter xml:id="language.expressions" xmlns="http://docbook.org/ns/docbook">
    <title>표현식</title>
@@ -183,7 +183,7 @@ $h = $g += 10;      /* 우선, $g는 10만큼 증가되어 24가 됨.
     
     상수 &true;와 &false; (대소문자를 구별하지 않음)는 두가지 논리값이다.
     필요하면, 표현식은 자동적으로 논리값으로 변환된다. 더자세한 정보는
-    <link linkend="language.types.typecasting">형-캐스트 섹션</link>을 참고할것.
+    <link linkend="language.types.typecasting">자료형 변환</link>을 참고할것.
    </simpara>
    <simpara>
     PHP는 표현식의 완벽하고도 강력한 구현방법을 제공한다. 그런 방법을
