--- a/language/variables.xml
+++ b/language/variables.xml
@@ -116,7 +116,7 @@ $bar = &test();    // Invalid.
    <para>
     PHP에서 변수를 초기화 할 필요는 없지만, 초기화는 매우 좋은 습관입니다.
     초기화되지 않은 변수는 자료형과 사용되는 위치에 따라서 기본값을 가집니다 -
-    불린 기본값은 &false;, 정수형과 소수형은 0,
+    논리 기본값은 &false;, 정수형과 소수형은 0,
     문자열(<function>echo</function>등에서 사용)은 빈 문자열로 설정되고,
     배열은 빈 배열로 설정됩니다.
    </para>
@@ -129,7 +129,7 @@ $bar = &test();    // Invalid.
 // 설정되지 않고 참조되지 않은 (사용되지 않은) 변수; NULL 출력
 var_dump($unset_var);
 
-// 불린 사용; 'false' 출력 (이 구문에 대한 설명은 3항 연산자를 참고하십시오)
+// 논리 사용; 'false' 출력 (이 구문에 대한 설명은 3항 연산자를 참고하십시오)
 echo($unset_bool ? "true\n" : "false\n");
 
 // 문자열 사용; 'string(3) "abc"' 출력
