--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -551,12 +551,12 @@ foreach (array_expression as $key => $value)
    </para>
    <simpara>
     첫번째 형태는 <literal>array_expression</literal>에서 주어진 배열에
-    대해 루프를 돈다. 각 루프에서 현재 배열요소(element)의 값은 <literal>$value</literal>
+    대해 루프를 돈다. 각 루프에서 현재 배열 원소의 값은 <literal>$value</literal>
     로 지정되고 내부적인 배열 포인터는 하나씩 이동하게 된다 (그래서
-    다음 루프에서 다음 배열 요소를 보게 될것이다)
+    다음 루프에서 다음 배열 원소를 보게 될것이다)
    </simpara>
    <simpara>
-    두번째 루프도 같은 일을 한다. 단 현재 배열요소의 키(key)값은
+    두번째 루프도 같은 일을 한다. 단 현재 배열 원소의 키(key)값은
     각 루프의 <literal>$key</literal>변수로 지정된다.
    </simpara>
    <simpara>
@@ -567,7 +567,7 @@ foreach (array_expression as $key => $value)
     <note>
      <para>
       <literal>foreach</literal>문이 처음 실행할때, 내부적인 배열 포인터는
-      자동적으로 배열의 첫번째 요소(element)로 리셋된다. 따라서 
+      자동적으로 배열의 첫번째 원소로 리셋된다. 따라서 
       <literal>foreach</literal>절 이전에 <function>reset</function>함수를
       호출할 필요는 없다.
      </para>
@@ -597,7 +597,7 @@ foreach ($arr as &$value) {
     $value = $value * 2;
 }
 // $arr은 이제 array(2, 4, 6, 8)입니다.
-unset($value); // 마지막 요소로 참조를 제거합니다.
+unset($value); // 마지막 원소로 참조를 제거합니다.
 ]]>
      </programlisting>
     </informalexample>
@@ -605,7 +605,7 @@ unset($value); // 마지막 요소로 참조를 제거합니다.
    </para>
    <warning>
     <para>
-     <literal>$value</literal> 참조와 마지막 배열 요소는
+     <literal>$value</literal> 참조와 마지막 배열 원소는
      <literal>foreach</literal> 루프 뒤에도 남아 있습니다.
      <function>unset</function>으로 제거하는 것을 권합니다.
     </para>
